# LedgerHQ-app-klaytn

./: .gitignore  .travis.yml  APP_SPECIFICATION.md  CHANGELOG.md  LICENSE.md  Makefile  README.md  devTools.md  docker-compose.yaml  docker-make  gdb.sh  gdb_info.txt  ledger_app.toml  sonar-project.properties  start_test.sh  transactions_rlp.yml
.clusterfuzzlite/: Dockerfile
.doxygen/: Doxyfile
.github/: PULL_REQUEST_TEMPLATE.md
app/: Makefile
app/lib/: instruction.c  util.h  (+4 more)
cally/: a.out  generate_map_for_hello.sh  hello.c  hello.c.233r.expand  hello.c.237r.expand
dev_tools/: start_app_builder.sh
doc/: api.md  fuzzing.md
fuzzing/: CMakeLists.txt  README.md  fuzz_message.c
fuzzing/extra/: TxParser.cmake
lib/: Makefile  instruction.c  instruction.h  message.c  message_test.c  parser.c  parser_test.c  print_config.c  printer.c  rfc3339.c  spl_token_instruction.c  stake_instruction_test.c  transaction_summary.c  util.h  vote_instruction.c
libsol/: Makefile  instruction.c  instruction.h  instruction_test.c  message.c  parser.c  parser_test.c  printer.c  spl_token_instruction.c  spl_token_instruction_test.c  transaction_summary.c  util.h
src/: address.c  apdu.c  apdu.h  app_main.c  constants.h  ethUstream.c  ethUstream.h  ethUtils.c  ethUtils.h  getPubkey.c  globals.h  logic_signTx.c  main.c  menu.c  menu_bagl.c  menu_nbgl.c  shared_context.h  signLegacyTransaction.c  signLegacyTransaction.h  signMessage.c  signOffchainMessage.c  ui_api.h  uint256.c  utils.c  utils.h  utils_copy.c  utils_copy.h
tests/: requirements.txt  test_appname_cmd.py  test_error_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cancel_cmd.py  test_sign_cmd.py  test_version_cmd.py  usage.md
util/: active-target.sh
(+54 files in other folders)
